Added GET /users/:id/statistics
